fix(welcome-page): leverage existing table display to vertical align

--- a/css/_welcome_page.scss
+++ b/css/_welcome_page.scss
@@ -193,7 +193,8 @@
     /*font-weight: bold;*/
     text-align: center;
     display: table-cell;
-    padding: 50px 26px 0px 20px;
+    padding: 0px 26px 0px 20px;
+    vertical-align: middle;
 }
 
 .feature_description
